Support JDK8 for maven 3.8.x compatibility